maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: value += is not a member of Int
  num+=1
     ^ShortestPathMaze:27: error: not found: value hasRightWall
  if(x<n-1 && !hasRightWall(x,y) && getIndication(x+1,y)==9999){
               ^ShortestPathMaze:30: error: not found: value hasBottomWall
  if(y<m-1 && !hasBottomWall(x,y) && getIndication(x,y+1)==9999){
               ^